apps/churaverse/backend-livekit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-livekit
  namespace: churaverse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-livekit
  template:
    metadata:
      labels:
        app: backend-livekit
    spec:
      containers:
        - name: backend-livekit
          image: harbor.youkan.uk/churaverse/backend_livekit:0.0.4
          ports:
            - containerPort: 12150
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
