apps/churaverse/backend-livekit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-livekit
  namespace: churaverse
spec:
  type: ClusterIP
  selector:
    app: backend-livekit
  ports:
    - name: http
      port: 12150
      targetPort: http
