apps/churaverse/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: churaverse
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 12100
      targetPort: http
